fixed footer spacing for mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -392,7 +392,7 @@ footer .content {
   display: flex;
   justify-content: space-between;
   align-content: center;
-  padding: 1rem auto;
+  padding: 1rem 0;
   width: 85%;
   height: 8rem;
   margin: 0 auto;
@@ -410,7 +410,7 @@ footer .social {
   justify-content: space-around;
   align-items: center;
   width: 8rem;
-  font-size: .9rem;
+  font-size: 1.3rem;
 }
 
 footer .date {
@@ -420,21 +420,29 @@ footer .date {
   width: 8rem;
 }
 
-#footerLogo {
+#footerNav {
   text-align: center;
   width: 60%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  padding: 1rem 0;
 }
 
-#footerLogo img {
+#footerNav ul {
   width: 12rem;
   margin: 0 auto;
 }
 
-#footerLogo ul {
-  width: 12rem;
-  margin: 0 auto;
+@media only screen and (max-width: 560px) {
+  footer .content {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid yellow;
+  }
+  footer .date {
+    color: #C0C0C0;
+  }
 }
